[package]
name = "usls"
version = "0.1.0"
rust-version = "1.80.1"
edition = "2021"
description = "A Rust library integrated with ONNXRuntime, providing a collection of ML models."
repository = "https://github.com/jamjamjon/usls"
authors = ["Jamjamjon <xxyydzml@outlook.com>"]
license = "MIT"
readme = "README.md"
exclude = ["assets/*", "examples/*", "runs/*", "benches/*"]

[dependencies]
aksr = { version = "0.0" }
image = { version = "0.25" }
imageproc = { version = "0.25" }
fast_image_resize = { version = "5.1", features = ["image"]}
ndarray = { version = "0.16", features = ["rayon"] }
rayon = { version = "1.10" }
anyhow = { version = "1.0" }
regex = { version = "1.11" }
rand = { version = "0.8" }
chrono = { version = "0.4" }
tokenizers = { version = "0.21" }
log = { version = "0.4" }
indicatif = "0.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
prost = "0.13"
ab_glyph = "0.2"
dirs = { version = "6.0" }
tempfile = "3.15"
geo = "0.29"
natord = "1.0"
sha2 = "0.10"
half = { version = "2.4" }
minifb = { version = "0.27", optional = true }
ort = { version = "2.0.0-rc.9", default-features = false}
ureq = { version = "2.12", default-features = false, features = [ "tls" ] }
rsmedia = { git = "https://github.com/phial3/rsmedia", branch = "main", default-features = true, optional = true }

[dev-dependencies]
argh = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }

[[example]]
name = "viewer"
required-features = ["ffmpeg"]

[features]
default = [
   "ort/ndarray",
   "ort/copy-dylibs",
   "ort/load-dynamic",
   "ort/half",
]
auto = ["ort/download-binaries"]
ffmpeg = ["dep:rsmedia", "dep:minifb"]
cuda = [ "ort/cuda" ]
trt = [ "ort/tensorrt" ]
mps = [ "ort/coreml" ]

[profile.release]
# lto = true
strip = true
panic = "abort"
